--- a/PET/Protokoll/PET_Protokoll_df.tex
+++ b/PET/Protokoll/PET_Protokoll_df.tex
@@ -90,11 +90,11 @@ Bevor die eigentlichen Messdaten aufgenommen werden können, muss die Messappera
        
        Die Fehler für die Umrechnung von Kanälen in physikalische Einheiten lassen sich leicht über die gauß'sche Fehlerfortpflanzung bestimmten und belaufen sich betreffend 
        der Diagramme in \ref{dft:kalim} auf:\\
-       $$ \Delta(\Delta t) = \unit[0,03]{ns} ; \Delta E_A = \unit[44,84]{keV}; \Delta E_A = \unit[44,00]{keV} $$
+       $$ \Delta(\Delta t) = \unit[0,03]{ns} ; \Delta E_A = \unit[44,84]{keV}; \Delta E_B = \unit[44,00]{keV} $$
        Um Messungen vorzunehmen, müssen jetzt die Fenster für Energie und Koninzidenzzeit bestimmt werden. Dies geschieht über Gauß-Fits in den Diagrammen von Tabelle \ref{dft:kalim}.
-       Dann bestimmt man das FWHM und zieht es von den Maxmumpositionen ab. Damit ergeben sich die Fenster zu:
-       $$ K_A \in \left[ 2217, 3101\right], K_B \in \left[ 1629, 2264 \right],  K_t \in \left[1252, 1351\right] $$ 
-       $$ E_A \in \left[478 , 636\right] \unit{keV}, E_B \in \left[ 458, 598\right] \unit{keV},  \Delta t \in \left[60, 65\right]\unit{ns} $$ 
+       Dann bestimmt man das FWHM und zieht es von den Maxmumpositionen ab. Damit ergeben sich die Fenster zu (für FWHM und $x_{max}$ siehe 5.1):
+       $$ K_A \in \left[ 2217; 3101\right], K_B \in \left[ 1629; 2264 \right],  K_t \in \left[1252; 1351\right] $$ 
+       $$ E_A \in \left[480; 640\right] \unit{keV}, E_B \in \left[ 460; 600\right] \unit{keV},  \Delta t \in \left[60,46; 65,24\right]\unit{ns} $$ 
        Daraus ergibt sich eine Koinzidenzauflösungszeit von $\tau = \unit[(4,77 \pm 0,02)]{ns}$, welche auf eine Zahl für die zufälligen Koinzidenzen führt. 
        
        \textbf{Koinzidenznachweiseffektivität}\\
@@ -107,7 +107,7 @@ Bevor die eigentlichen Messdaten aufgenommen werden können, muss die Messappera
            \dot N = \dot N_K + \dot N_Z
            \label{dff:NG}
        \end{gather}
-       Dabei ist in \ref{dff:NG} $\dot N$ gegeben durch die Gesamtzahl der Ereignisse $N=400000$ (vorgegeben) geteilt durch die Zeit $\tilde t_{A/B}$, die bis zum Erreichen dieser Zahl benötigt wurde. 
+       Dabei ist in Gleichung (\ref{dff:NG}) die Gesamtkoinzidenzzählrate $\dot N$ gegeben durch die Gesamtzahl der Ereignisse $N=400000$ (vorgegeben) geteilt durch die Zeit $\tilde t_{A/B}$, die bis zum Erreichen dieser Zahl benötigt wurde. 
        Dabei sind $\varepsilon_{A/B}$ die Nachweiseffektivitäten der Detektoren, $P_\beta$ die Positronenemissionswahrscheinlichkeit und $\Omega_{min}$ der Raumwinkel des Detektors, der am weitesten von der Quelle entfernt
        ist. $\dot N_Z$ ist die Zählrate zufälliger Koinzidenzen. Setzt man die Gleichungen \ref{dff:NK} und \ref{dff:NZ} ineinander ein, erhält man folgende Gleichung für die Nachweiseffektivitäten:
        $$ \varepsilon_A \varepsilon_B = \frac{\pi^2 \dot N_Z}{A^2 P_\beta \tau \Omega^2_{min}} \text{ mit } \Omega_{min} = \frac{4a^2}{\left(D-b\right)^2 } \text{ und } \dot N_{Z,A/B} = \frac{2\tau A \Omega N}{\left(\pi + 2\tau A \Omega\right) \tilde t_{A/B}} = \frac{N_Z}{\tilde t_{A/B}}$$
@@ -123,8 +123,8 @@ Bevor die eigentlichen Messdaten aufgenommen werden können, muss die Messappera
 
     \subsubsection{Messung bei Positionen direkt an den Detektoren}
         Als nächstes soll der Abstand der beiden Detektoren zueinander bestimmt werden. Hierfür erfolgen Messungen, bei denen die Kalibrierquelle direkt an den Detektoren positioniert wird.
-        Wie oben angedeutet, sieht man in den nachfolgenden Diagramme auch die Detektionen von den Photenen der Zerfallsreihe mit nur 10\% Wahrscheinlichkeit, eben jenen Prozessen, die nicht
-        die gewollte Positronenemission erzeugen. Besonders gut fällt dies dort auf, wo die Quelle wirklich direkt am Detektor liegt nicht und nicht am gegenüberliegenden.
+        Wie oben angedeutet, sieht man in den nachfolgenden Diagramme auch die Detektionen von den Photonen der Zerfallsreihe mit nur 10\% Wahrscheinlichkeit, eben jenen Prozessen, die nicht
+        die gewollte Positronenemission erzeugen. Besonders gut fällt dies dort auf, wo die Quelle wirklich direkt am Detektor liegt und nicht am gegenüberliegenden.
         Am gegenüberliegenden Detektor sieht man jeweils zwei große Peaks von denen einer im niedrigeren Energiebereich als dem erwarteten liegen.
         Dies ist auch nachvollziehbar, da alle gestreuten und durch Bremsstrahlung erzeugten Photonen mitgezählt werden.
         \begin{longtable}{p{6cm}p{6cm}l}
