added some sentences

--- a/NMR/protocoll/NMR_protocol_exp.tex
+++ b/NMR/protocoll/NMR_protocol_exp.tex
@@ -1,2 +1,6 @@
 \section{Experimental procedure}
-	
+	\subsection{Preparation of a high frequency resonant circuit}
+    First one has to prepare a copper coil with a diameter big enough to hold an iron powder assay. After the coil was wrapped one has to sold it onto contacts of a stick, which provides a mechanism to tune the measured frequency to find the resonance frequency. One has du be carefully 
+    \subsection{}
+    
+    \subsection{}
