--- a/NMR/protocoll/NMR_protocol_exp.tex
+++ b/NMR/protocoll/NMR_protocol_exp.tex
@@ -1,6 +1,6 @@
 \section{Experimental procedure}
 	\subsection{Preparation of a high frequency resonant circuit}
-    First one has to prepare a copper coil with a diameter big enough to hold an iron powder assay. After the coil was wrapped one has to sold it onto contacts of a stick, which provides a mechanism to tune the measured frequency to find the resonance frequency. One has du be carefully 
+    First one has to prepare a copper coil with a diameter big enough to hold an iron powder assay. After the coil is wrapped one has to sold it onto the contacts of a stick, which provides a mechanism to tune the measured frequency to find the resonance frequency. While solding one has to be careful to make sure, that one do not take to much tin, because the resisteaces of tin and copper are different. In the same way the soldered point should connect the contact and the coil directly, otherwise this could influence the results while tuning to the resonance frequency.
     \subsection{}
     
     \subsection{}
