--- a/NMR/protocoll/NMR_protocol_exp.tex
+++ b/NMR/protocoll/NMR_protocol_exp.tex
@@ -17,7 +17,9 @@
     The rotation regulator (\ref{fig:sketch}.1) varies the space between the capacitor's plates (\ref{fig:sketch}.3) so one can tune the frequency of the solenoid (\ref{fig:sketch}.2).
     \subsection{Finding of the nuclear spin resonance by varying the pulse frequency}
     \label{task_2}
-        \begin{figure}
+    
+    After the preparation of the solenoid and the insertion of the probe into the cryostat one has to mention what the different paramters, the measurement software has do with the curve. The different parameters one could vary are $pw$, $\tau$, $rd$ and $ad$. 
+        \begin{figure}[h]
             \subfigure[intensity below resonance frequency in time domain\label{beltd}]{\includegraphics[scale=0.225]{pic/below_resfreq_td.png}}
             \subfigure[intensity below resonance frequency in fourier space\label{belfs}]{\includegraphics[scale=0.225]{pic/below_resfreq_fs.png}}
             \subfigure[intensity at resonance frequency in time domain\label{restd}]{\includegraphics[scale=0.21]{pic/resfreq_td.png}}
@@ -26,18 +28,20 @@
             \subfigure[intensity below resonance frequency in fourier space\label{abofs}]{\includegraphics[scale=0.225]{pic/above_resfreq_fs.png}}
             \caption{Different spectra below, at and above the resonance frequency}
          \end{figure}
-    \ref{beltd}
+         
+         
     \subsection{Optimization of the pulse sequence by recording a roation angle curve}
     \label{task_3}
     
     \subsection{Finding of $T_1 \text{ and } T_2$}
     \subsubsection{Spin-Lattice relaxation constant}
-    \begin{center}
-        \minipanf
+    \begin{figure}[h]
             \includegraphics[scale=0.3]{pic/T1.png}
             \captionof{figure}{fit of a spin}
-        \minipend
-    \end{center}
+    \end{figure}
     \subsubsection{Spin-Spin relaxation constant}
+    \begin{figure}
+            \includegraphics[scale=0.3]{pic/T2.png}
+    \end{figure}
     
     \label{task_4}
