--- a/NMR/protocoll/NMR_protocol_exp.tex
+++ b/NMR/protocoll/NMR_protocol_exp.tex
@@ -17,8 +17,8 @@
     The rotation regulator (\ref{fig:sketch}.1) varies the space between the capacitor's plates (\ref{fig:sketch}.3) so one can tune the frequency of the solenoid (\ref{fig:sketch}.2).
     \subsection{Finding of the nuclear spin resonance by varying the pulse frequency}
     \label{task_2}
-    After the preparation of the solenoid and the insertion of the probe into the cryostat one has to mention what the different paramters, the measurement software has, do with the curve. The different parameters one could vary are $pw$, $\tau$, $rd$ and $ad$. $pw$ makes the magnitude look more gaussian and gives it a bigger value by make the imaginary and real parts more oscillating the higher it is. Varying $\tau$ shows less oscillations and a lower magnitude the higher $\tau$ is. At least one can also vary the parameter $rd$. The higher it is, the more oscillations can be found. One varies this parameters to better fit the magnitude to a gaussian. This means, one searches parameters with a low amount of oscillations, which also have not a big intensity. After the best parameters ($ pw=2\unit{\mu s},\ \tau = 60\unit{\mu s},\ rd = 15\unit{\mu s},\ ad=10\unit{\mu s} $) are found, one looks  at the behavior of the curve at the resonance frequency, a littlebit below and a bit above as shown in the figures \ref{beltd} - \ref{abofs}.
-        \begin{figure}[h]
+    After the preparation of the solenoid and the insertion of the probe into the cryostat one has to mention what the different paramters built in the measurement-software do with the curves. The different parameters one could vary are $pw$, $\tau$, $rd$ and $ad$. $pw$ makes the magnitude look more gaussian and gives it a bigger value by make the imaginary and real parts more oscillating the higher it is. Varying $\tau$ shows less oscillations and a lower magnitude the higher $\tau$ is. At least one can also vary the parameter $rd$. The higher it is, the more oscillations can be found. These parameters are choosed such that the magnitude fits better to a gaussian. This means, one searches parameters with a low amount of oscillations, which also have not a big intensity. After the best parameters ($ pw=2\unit{\mu s},\ \tau = 60\unit{\mu s},\ rd = 15\unit{\mu s},\ ad=10\unit{\mu s} $) are found, one looks  at the behavior of the curve at the resonance frequency, a little bit below and a bit above as shown in the figures \ref{beltd} - \ref{abofs}.\\
+        \begin{figure}[H]
             \subfigure[intensity below resonance frequency in time domain\label{beltd}]{\includegraphics[scale=0.225]{pic/below_resfreq_td.png}}
             \subfigure[intensity below resonance frequency in fourier space\label{belfs}]{\includegraphics[scale=0.225]{pic/below_resfreq_fs.png}}
             \subfigure[intensity at resonance frequency in time domain\label{restd}]{\includegraphics[scale=0.21]{pic/resfreq_td.png}}
@@ -28,7 +28,7 @@
             \caption{Different spectra below, at and above the resonance frequency}
          \end{figure}
      One can see that the number of oscillations in \ref{abotd} and \ref{beltd} is bigger than in \ref{restd}. In figure \ref{resfs} one recognizes a good gaussian peak.
-     With that information the frequency is found at $\omega_L = 45.47\unit{MHz}$ With the help of the $\gamma$-factor defined in (\ref{eq:gamma}) and the formula (\ref{eq:lamor}), one can calculate the magnetic field as $B_z = \omega_L/\gamma = 0.525\unit{T}$.
+     With that information the frequency is found at $\omega_L = 45.47\unit{MHz}$. Using the $\gamma$-factor defined in (\ref{eq:gamma}) and the formula (\ref{eq:lamor}) one can calculate the magnetic field as $B_z = \omega_L/\gamma = 0.525\ \unit{T}$. This is a typical value for a magnetic flux density occuring in the bond of a solid state body.
          
     \subsection{Optimization of the pulse sequence by recording a rotation angle curve}
     \label{task_3}
@@ -47,7 +47,7 @@
         y(\tau) = A\cdot(1-e^{-\tau/T_1})\label{fit_T1}\\
         y(\tau) = y_0 + Ae^{-2\tau/T_2}\label{fit_T2}
     \end{gather}
-    With a tool called Qtiplot one makes a fit with these funktions a gets the blue line in \ref{T1} and \ref{T2}. The parameters for \ref{fit_T2} are: $$A = 17720,\ y_0 = 6220$ and the spin-spin-relaxation constant $T_2 = 7628\unit{\mu s}$$
+    With a tool called Qtiplot one makes a fit with these funktions a gets the blue line in \ref{T1} and \ref{T2}. The parameters for \ref{fit_T2} are: $A = 17720,\ y_0 = 6220$ and the spin-spin-relaxation constant $T_2 = 7628\unit{\mu s}$
     The parameters for the spin-lattice-relaxation are:
     $$ A = 31050,\ T_1 = 728\unit{\mu s} $$
     
