Corrected orthography in MMC

--- a/MMC/protokoll/MMC_protocol_title.tex
+++ b/MMC/protokoll/MMC_protocol_title.tex
@@ -34,7 +34,7 @@ Christian \textsc{Siegel}
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisor:} \\
-Samata \textsc{Chaudhur} % Supervisor's Name
+Samata \textsc{Chaudhuri} % Supervisor's Name
 \end{flushright}
 \end{minipage}\\[4cm]
 
