--- a/MMC/protokoll/MMC_protocol_exp.tex
+++ b/MMC/protokoll/MMC_protocol_exp.tex
@@ -3,7 +3,7 @@
 	% TODO: describe making of the specimen; create graphic that visualises the purpose of the used chemicals
 	
 		
-		We started the experiment with preparing the specimen that is visualised schematically in Figure \ref{exp:steppingAssay}. For that we got a hydrophobic object holder where several organic substances later will bind to. Two flow channels were formed by placing 3 stripes of some synthetic material on the slide that seal the channels under the coverslip after a short heating procedure. Then these channels were flooded by several chemicals. At first we filled in the \textit{BRB80} buffersolution. That is necessary to hold the pH-Value approximately constant. Then we put the \textit{Anti-$\beta$-tubulin antibodies} in the channel that bind the microtubules to the surface of the object holder. The experiment of our group unfortunately failed probably because of using a too thin antibody-solution in this step. For hindering proteins other than the microtubules to bind to the surface of the slide we now wash the channel with some blocker-substances: \textit{F127} and \textit{Casein}. Because microtubules are highly dynamic filaments we have to stabilise them somehow. For this purpose we combine our BRB buffersolution with \textit{taxol} that prevents the depolymerisation of tubulin. So finally we can put the rhodamine-labeled \textit{microtubules} and the \textit{kinesin-1 motorproteins} that are dyed with GFP in the channel. The kinesin-solution is enriched with \textit{MgATP} that is the 'fuel' of the motorpretein's-motion. Additionally a \textit{glucose-based antifade-cocktail} is used to surpress the reaction of free-radicals created by strongly excited fluorophores with free-oxygen of about a factor 2. This is necessary to reduce the photobleaching and the damaging of the proteins.
+		We started the experiment with preparing the specimen that is visualised schematically in Figure \ref{exp:steppingAssay}. For that we got a hydrophobic object holder where the later mentioned antibodies and blocker-substances will bind to. Two flow channels were formed by placing 3 stripes made of paraffin on the slide that seal the channels under the coverslip after a short heating procedure. Then these channels were flooded by several chemicals. At first we filled in the \textit{BRB80} buffersolution. That is necessary to hold the pH-Value approximately constant. Then we put the \textit{Anti-$\beta$-tubulin antibodies} in the channel that bind the microtubules to the surface of the object holder. The experiment of our group unfortunately failed probably because of using a too thin antibody-solution in this step. For hindering proteins other than the microtubules to bind to the surface of the slide we now wash the channel with some blocker-substances: \textit{F127} and \textit{Casein}. Because microtubules are highly dynamic filaments we have to stabilise them somehow. For this purpose we combine our BRB buffersolution with \textit{taxol} that prevents the depolymerisation of tubulin. So finally we can put the rhodamine-labeled \textit{microtubules} and the \textit{kinesin-1 motorproteins} that are dyed with GFP in the channel. The kinesin-solution is enriched with \textit{MgATP} that is the 'fuel' of the motorpretein's-motion. Additionally a \textit{glucose-based antifade-cocktail} is used to surpress the reaction of free-radicals created by strongly excited fluorophores with free-oxygen of about a factor 2. This is necessary to reduce the photobleaching and the damaging of the proteins.
  		\begin{figure}[H]
  			\centering
  		   	\captionsetup{justification=raggedright, margin =4cm}            
